Update Electronic System for Navigation of Visually Impaired People.ipynb

--- a/Electronic System for Navigation of Visually Impaired People.ipynb
+++ b/Electronic System for Navigation of Visually Impaired People.ipynb
@@ -47,8 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apikey = 'AIzaSyB9vPHQB0PNUa07kKaoUuO3SqeUC0PipjI'\n",
-    "#apikey = 'AIzaSyBl4ZF79SN7n6-RNECgB1nC6Yq_STrNBD0'\n",
+    "apikey = 'Enter Api key'\n",
     "#configuring api key\n",
     "gmaps.configure(api_key=apikey)"
    ]
